* Improve commenting. * Hide event download button on mobile - fix #13

--- a/src/assets/css/scss/pages/_eventDetail.scss
+++ b/src/assets/css/scss/pages/_eventDetail.scss
@@ -17,3 +17,10 @@
 		}
 	}
 }
+.btn-eventDownload {
+	display: none;
+
+	@include mq($mq-large) {
+		display: inline-block;
+	}
+}
